# clock-overlay

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml  vcpkg-configuration.json  vcpkg.json
clock/: main.py
src/: app.c  app.h  lib.c  lib.h  main.c
